--- a/src/app/survey-editor/survey-details.component.css
+++ b/src/app/survey-editor/survey-details.component.css
@@ -70,7 +70,7 @@
 }
 
 .navigation {
-    box-shadow: 0px 0px 10px #b4b4b4;
+    box-shadow: 5px 2px 10px #b4b4b4;
     background: #ffffff;
     display: flex;
     flex-flow: row wrap;
