--- a/src/app/tab-views/tab-views.component.css
+++ b/src/app/tab-views/tab-views.component.css
@@ -1,3 +1,5 @@
+#wrapper {
+}
 .table td {
     cursor: pointer;
 }
